@@ -1,3 +1,8 @@
+2010-04-20  Nick Clifton  <nickc@redhat.com>
+
+	* readelf.c: Add _() macros to constant strings that are
+	translatable.
+
 2010-04-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	* readelf.c (arm_attr_tag_FP_arch): Rename from arm_attr_tag_VFP_arch.
